<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Wack!</string>
    <string name="app_name">wack-a-steve</string>
    <string name="continue_label">Continue.</string>
    <string name="new_game_label">New Game.</string>
    <string name="about_label">About</string>
    <string name="quit_label">Quit Application.</string>
    <string name="about_title">About Wack-a-Steve</string>
    <string name="about_text">There are two different game types. \
    Timed: In this game type you must click the correct square before it disappears.
   	\ The number of misses you make is tallied up and at the end of the round your score bonus is calculated \
    from the amount of correct hits and misses that you make.\
    
    FLTL: Stands for Five lives to live. In this game mode you are allowed 5 misses of the squares,\
    once you reach this limit the game is over.</string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="choose_label">Choose game type:</string>
    <string name="timed_label">Timed Session</string>
    <string name="fltl_label">FLTL Session</string>
</resources>
