<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip" 
    android:orientation="horizontal">
    <LinearLayout
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_gravity="center"
    	android:orientation="vertical" 
    	>
		<TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginBottom="25dip"
		    android:textSize="24.5sp" 
		    android:text="@string/hello"
	    />
		<Button 
			android:id="@+id/new_button" 
			android:text="@string/new_game_label" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
		/>
	    <Button
	    	android:id = "@+id/continue_button"
	    	android:layout_width = "fill_parent"
	    	android:layout_height = "wrap_content"
	    	android:text="@string/continue_label" 
	    />
	    <Button
	    	android:id = "@+id/about_button"
	    	android:layout_width = "fill_parent"
	    	android:layout_height = "wrap_content"
	    	android:text = "@string/about_label"
	    />
	    <Button
	    	android:id = "@+id/quit_button"
	    	android:layout_width = "fill_parent"
	    	android:layout_height = "wrap_content"
	    	android:text = "@string/quit_label"
	    />
    </LinearLayout>
</LinearLayout>
